# CLIGraphics

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  class_c_l_i_gx_1_1_c_l_i_graphics.html  class_mouse.html  cligx_8hpp.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  files.html  index.html  modules.html  mouse_8hpp.html  namespace_c_l_i_gx.html  namespaces.html  namespacestlglm.html  pages.html  searchdata-v2.js  stlglm_8hpp.html  struct_c_l_i_gx_1_1_line_hash.html  struct_c_l_i_gx_1_1_vec_hash.html
.github/workflows/: documentation.yaml
include/: cligx.hpp  mouse.hpp  stlglm.hpp
models/: Stanford_Bunny_Min.stl
source/: main.cpp  mouse.cpp  stlglm.cpp
